--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "babel src/index.js -d dist",
     "start": "babel-node src/index.js",
-    "dev": "nodemon --exec babel-node src/index.js"},
+    "dev": "nodemon --exec babel-node src/index.js"
+  },
   "keywords": [
     "backend",
     "node",
@@ -24,7 +25,9 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "mongoose": "^6.9.1",
     "morgan": "^1.10.0"
   }
 }
