--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "rolling-restaurant-proyecto-final-backend",
+  "name": "miprimerbackend",
   "version": "1.0.0",
-  "description": "backend con node",
+  "description": "Rolling backend",
   "main": "src/index.js",
   "scripts": {
     "build": "babel src/index.js -d dist",
@@ -9,25 +9,25 @@
     "dev": "nodemon --exec babel-node src/index.js"
   },
   "keywords": [
-    "backend",
-    "node",
-    "js",
-    "rolling"
+    "rolling",
+    "backend"
   ],
-  "author": "Aramayo luis",
+  "author": "Grupo 2",
   "license": "ISC",
   "devDependencies": {
-    "@babel/cli": "^7.20.7",
-    "@babel/core": "^7.20.12",
-    "@babel/node": "^7.20.7",
+    "@babel/cli": "^7.19.3",
+    "@babel/core": "^7.20.5",
+    "@babel/node": "^7.20.5",
     "@babel/preset-env": "^7.20.2",
     "nodemon": "^2.0.20"
   },
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mongoose": "^6.9.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.9.0",
     "morgan": "^1.10.0"
   }
 }
